Tutor profile done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name"></string>
     <string name="search_hint">Search our answer forums</string>
     <string name="title_activity_searchable">SearchableActivity</string>
+    <string name="email_subject_default">EduSoS!</string>
+    <string name="email_body_default">Hi, I\'m looking for some academic help and I came across your profile on EduSoS, could we set up a time to chat?</string>
 </resources>
